--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "lodash": "^3.10.0",
     "loopback-swagger": "^5.0.0",
     "strong-globalize": "^2.6.2",
-    "swagger-ui": "^2.2.5"
+    "swagger-ui": "^3.2.0",
+    "swagger-ui-dist": "^3.2",
+    "tween": "^0.9.0"
   }
 }
