--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "lodash": "^3.10.0",
     "loopback-swagger": "^5.0.0",
     "strong-globalize": "^2.6.2",
-    "swagger-ui-dist": "^3.2",
-    "tween": "^0.9.0"
+    "swagger-ui-dist": "^3.2"
   }
 }
