--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "debug": "^2.2.0",
     "depd": "^1.1.0",
     "lodash": "^3.10.0",
-    "loopback-swagger": "^5.0.0",
+    "loopback-swagger": "drmikecrowe/loopback-swagger#semver:^6.0",
     "strong-globalize": "^3.1.0",
-    "swagger-ui": "^2.2.5"
+    "swagger-ui-dist": "^3.9"
   }
 }
