--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loopback-component-explorer",
-  "version": "1.0.0",
+  "version": "6.0.0-mualig",
   "description": "Browse and test your LoopBack app's APIs",
   "engines": {
     "node": ">=4"
